# lazytask

./: .gitignore  .gitmodules  .golangci.yml  .nvim.lua  .tmuxinator.yml  CLAUDE.md  DEVELOPER_GUIDE.md  GEMINI.md  Instructions.md  README.md  add_task.py  build  check  complete_task.py  edit_date.py  edit_description.py  edit_flags.py  edit_priority.py  edit_tags.py  get_all_tasks.py  go.mod  go.sum  hotreload  ideas.txt  justfile  lazytask  main.go  main.py  move_to_tomorrow.py  mypy.ini  next_stuff.md  pyproject.toml  refresh_list.py  reminders-cli-interface.md  run  sort_filter_tasks.py  switch_lists.py
app/: go.mod  main.go
application/: app_service.go  app_service_test.go  task_service.go
cli/: .gitignore  go.mod  lazytask
config/: config.go
domain/: interfaces.go  lazytask.go  list.go  model.go  task.go
entities/: interfaces.go  list.go  task.go
infrastructure/: parsing_test.go  reminders_task_controller.go  reminders_task_controller_test.go
lazytask/: __main__.py  app.py  container.py  edit_task_screen.py  help_screen.py  main.py  task_details_screen.py
task-controllers/: reminders.go
tests/: conftest.py  stubs.py  test_add_task_due_today.py  test_app.py  test_backend.py  test_config.py  test_context_sensitive_actions.py  test_date_editing.py  test_date_picker.py  test_description_edit.py  test_due_date_hotkeys.py  test_due_today_hotkey.py  test_edit_screen.py  test_filtering.py  test_highlighting.py  test_integration.py  test_keybindings.py  test_list_switching.py  test_list_tabs.py  test_logging.py  test_mock_integration.py  test_navigation.py  (+17 more)
(+59 files in other folders)
