
[project]
name = "lazytask"
version = "0.1.0"
dependencies = [
    "textual",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["lazytask"]

[tool.hatch.metadata]
allow-direct-references = true
