[project]
name = "lazytask"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "textual",
    "textual-datepicker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "textual[dev]", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["lazytask"]

[project.scripts]
lazytask = "main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"
